magento-deployment/app-cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: magento-ns
  name: magento-cron
  labels:
    app: magento
    component: cron
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: magento
      component: cron
  template:
    metadata:
      namespace: magento-ns
      labels:
        app: magento
        component: cron
    spec:
      securityContext:
        runAsUser: 0
      tolerations:
        - key: cloud.google.com/gke-preemptible
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - image: asia.gcr.io/magento-gke-248206/magento:2
          name: magento
          resources:
            requests:
              memory: 768Mi
              cpu: 500m
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - "rm -rf /var/www/magento/app/etc \
                    && ln -sf /var/www/magento/app/nfs_etc /var/www/magento/app/etc \
                    && bin/magento cron:install --force \
                    && service cron start"
          volumeMounts:
            - name: nfs-etc-pvc
              mountPath: /var/www/magento/app/nfs_etc
      volumes:
        - name: nfs-etc-pvc
          persistentVolumeClaim:
            claimName: nfs-etc-pvc
