magento-deployment/pod-init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento-init
  labels:
    app: magento-init
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: magento-init
      tier: frontend
  template:
    metadata:
      labels:
        app: magento-init
        tier: frontend
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      containers:
        - image: asia.gcr.io/magento-gke-248206/magento:2
          name: magento-init
          resources:
            requests:
              memory: 768Mi
              cpu: 200m
          ports:
            - name: http
              containerPort: 8080
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - "cp -f /var/www/magento/app/etc/* /var/www/magento/app/nfs_etc \
                    && rm -rf /var/www/magento/app/etc \
                    && ln -sf /var/www/magento/app/nfs_etc /var/www/magento/app/etc \
                    && cp -f /var/www/magento/generated/.htaccess /var/www/magento/nfs_generated \
                    && rm -rf /var/www/magento/generated \
                    && ln -sf /var/www/magento/nfs_generated /var/www/magento/generated \
                    && cp -f /var/www/magento/pub/static/.htaccess /var/www/magento/pub/nfs_static \
                    && rm -rf /var/www/magento/pub/static \
                    && ln -sf /var/www/magento/pub/nfs_static /var/www/magento/pub/static"
          volumeMounts:
            - name: nfs-generated-pvc
              mountPath: /var/www/magento/nfs_generated
            - name: nfs-view-preprocessed-pvc
              mountPath: /var/www/magento/var/view_preprocessed
            - name: nfs-etc-pvc
              mountPath: /var/www/magento/app/nfs_etc
            - name: nfs-upload-pvc
              mountPath: /var/www/magento/pub/media/upload
            - name: nfs-static-pvc
              mountPath: /var/www/magento/pub/nfs_static
      volumes:
        - name: nfs-generated-pvc
          persistentVolumeClaim:
            claimName: nfs-generated-pvc
        - name: nfs-view-preprocessed-pvc
          persistentVolumeClaim:
            claimName: nfs-view-preprocessed-pvc
        - name: nfs-etc-pvc
          persistentVolumeClaim:
            claimName: nfs-etc-pvc
        - name: nfs-upload-pvc
          persistentVolumeClaim:
            claimName: nfs-upload-pvc
        - name: nfs-static-pvc
          persistentVolumeClaim:
            claimName: nfs-static-pvc
