magento-deployment/app-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-admin
  labels:
    app: magento
    component: admin
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: magento
    component: admin
