magento-deployment/app-front-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento
  labels:
    app: magento
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: magento
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento
  labels:
    app: magento
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0%
  selector:
    matchLabels:
      app: magento
      tier: frontend
  template:
    metadata:
      labels:
        app: magento
        tier: frontend
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      tolerations:
        - key: cloud.google.com/gke-preemptible
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - image: asia.gcr.io/magento-gke-248206/magento:2
          name: magento
          resources:
            requests:
              memory: 756Mi
              cpu: 200m
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /pub/health_check.php
              port: 8080
          lifecycle:
            postStart:
              exec:
                # Share static cache dir to all pods.
                command:
                  - sh
                  - -c
                  - "rm -rf /var/www/magento/app/etc \
                    && ln -sf /var/www/magento/app/nfs_etc /var/www/magento/app/etc \
                    && rm -rf /var/www/magento/generated \
                    && ln -sf /var/www/magento/nfs_generated /var/www/magento/generated \
                    && rm -rf /var/www/magento/pub/static \
                    && ln -sf /var/www/magento/pub/nfs_static /var/www/magento/pub/static"
          volumeMounts:
            - name: nfs-generated-pvc
              mountPath: /var/www/magento/nfs_generated
            - name: nfs-view-preprocessed-pvc
              mountPath: /var/www/magento/var/view_preprocessed
            - name: nfs-etc-pvc
              mountPath: /var/www/magento/app/nfs_etc
              readOnly: true
            - name: nfs-upload-pvc
              mountPath: /var/www/magento/pub/media/upload
            - name: nfs-static-pvc
              mountPath: /var/www/magento/pub/nfs_static
      volumes:
        - name: nfs-generated-pvc
          persistentVolumeClaim:
            claimName: nfs-generated-pvc
        - name: nfs-view-preprocessed-pvc
          persistentVolumeClaim:
            claimName: nfs-view-preprocessed-pvc
        - name: nfs-etc-pvc
          persistentVolumeClaim:
            claimName: nfs-etc-pvc
        - name: nfs-upload-pvc
          persistentVolumeClaim:
            claimName: nfs-upload-pvc
        - name: nfs-static-pvc
          persistentVolumeClaim:
            claimName: nfs-static-pvc
