magento-deployment/magento-nfs-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: nfs-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      role: nfs-server
  template:
    metadata:
      labels:
        role: nfs-server
    spec:
      containers:
        - name: nfs-server
          image: k8s.gcr.io/volume-nfs:0.8
          ports:
            - name: nfs
              containerPort: 2049
            - name: mountd
              containerPort: 20048
            - name: rpcbind
              containerPort: 111
          securityContext:
            privileged: true
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - 'mkdir -p /exports/upload/ /exports/static/'
          volumeMounts:
            - name: nfs-server-pvc
              mountPath: /exports
      volumes:
        - name: nfs-server-pvc
          persistentVolumeClaim:
            claimName: nfs-server-pvc
