magento-deployment/app-admin-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: magento-ns
  name: magento-admin-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: magento-admin-static-ip
    networking.gke.io/managed-certificates: admin-certificate
spec:
  backend:
    serviceName: magento-admin
    servicePort: 80
