magento-deployment/app-front-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: magento-ns
  name: magento-frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: magento-static-ip
    networking.gke.io/managed-certificates: frontend-certificate
spec:
  backend:
    serviceName: magento-app
    servicePort: 80
